--- a/contact.html
+++ b/contact.html
@@ -18,7 +18,7 @@
         </ul>
     </nav>   
     <header>
-    <img src="html\download.jpg">
+    <img src="img\download.jpg">
     
     <h1>Contact Us<br>Let s plan your dream holiday</h1>
     
