--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </nav>
 
   <header>
-  <img src="\html\cherry-blossom-viewing-guide_key.jpg">
+  <img src="\img\cherry-blossom-viewing-guide_key.jpg">
     <h1>Welcome to Sakura 2025</h1>
     
     
